@@ -931,7 +931,7 @@ CreateMainWin (LogviewWindow *window)
 
    /* Add signal handlers */
    g_signal_connect (G_OBJECT (selection), "changed",
-                     G_CALLBACK (handle_selection_changed_cb), window);
+                     G_CALLBACK (selection_changed_cb), window);
    g_signal_connect (G_OBJECT (window->view), "row-expanded",
                      G_CALLBACK (row_toggled_cb), window);
    g_signal_connect (G_OBJECT (window->view), "row-collapsed",
